# rust-cognizant

./: README.md
10-if-else/src/: main.rs
11-if-else/src/: main.rs
12-match-pattern/: Cargo.toml
12-match-pattern/src/: main.rs
13-option-types/: Cargo.toml
13-option-types/src/: main.rs
14-options-type/: Cargo.toml
14-options-type/src/: main.rs
15-result-type/src/: main.rs
16-loops/src/: main.rs
17-while-loop/src/: main.rs
18-for-loop/src/: main.rs
19-arrays/src/: main.rs
24-raw-pointer/: Cargo.toml
25-scope-primitive-ref/: Cargo.toml
33-structs/: Cargo.toml
45-clojures/: Cargo.toml  notes.md
52-thread-channels/: Cargo.toml
53-thread-channels/: Cargo.toml
54-tokio-demo/: notes.md
55-tokio-async-await/: Cargo.toml
56-tokio-async-await/: Cargo.toml
57-tokio-another-example/: Cargo.toml
59-tokio-async-await/: Cargo.toml
9-touple/: Cargo.toml
crud-sqlx-actix-demo/: .env  Cargo.toml  Dockerfile  README.md
crud-sqlx-actix-demo/curls/: post  put
crud-sqlx-actix-demo/src/: main.rs
crud-sqlx-actix-demo/src/db/: db.rs
crud-sqlx-actix-demo/src/handlers/: handlers.rs
crud-sqlx-actix-demo/src/models/: models.rs
demo-package/: Cargo.toml  notes.md
demo5/: Cargo.toml
demo_shapes/: Cargo.toml  notes.md
http-appdata/: Cargo.toml
http-counter/: Cargo.toml
http-demo/: Cargo.toml  Dockerfile  README.md
my_shapes_consumer/: Cargo.toml
my_shapes_consumer2/: Cargo.toml
tasks/: 1-task-options.md  1-task.md  3-task-loop.md  4-task-vector.md  5-task-map.md  6-task-closure.md  6-task-struct.md  7-task-vec-closure.md
(+67 files in other folders)
