[package]
name = "crud-sqlx-actix-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive","serde_derive"] }
#serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres" , "runtime-tokio", "macros"] }
tokio = { version = "1.42.0", features = ["full"] }
